--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
 
             <header>
                 <img style="height: 100px;" src="assets/images/logo.png" alt="The Hotel Logo">
-                <a href="login.html" target="_blank">Login</a>
+                <a href="login.html">Login</a>
             </header>
 
             <div class="main">
-                <p>Search Bar</p>
+                <input type="text" placeholder="City"><br>
                 <a href="list.html"><img src="https://media-cdn.tripadvisor.com/media/photo-s/15/33/fe/a2/new-delhi.jpg" alt="Delhi"></a>
                 <img src="https://media-cdn.tripadvisor.com/media/photo-s/15/33/fc/f0/goa.jpg" alt="Goa">
                 <img src="https://media-cdn.tripadvisor.com/media/photo-s/0f/98/f7/df/charminar.jpg" alt="Hyderabad">
@@ -26,7 +26,7 @@
             </div>
 
             <footer>
-                <a href="contact.html" target="_blank">Contact Us</a>
+                <a href="contact.html">Contact Us</a>
                 <div class="socials">
                     <a href="https://www.facebook.com/"><img src="assets/images/facebook.png" alt="Facebook Logo"></a>
                     <a href="https://www.instagram.com/"><img src="assets/images/instagram.png" alt="Instagram Logo"></a>
