--- a/contact.html
+++ b/contact.html
@@ -4,12 +4,20 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-        <title>Hello, world!</title>
+        <title>Contact</title>
     </head>
     <body>
 
         <div class="main-wrapper">
-            <h1>Contact Us</h1>
+            
+            <p>Thank you for reaching out!!!</p>
+            <p>Please enter your email and we will get back to you.</p>
+
+            <form action="index.html" method="get">
+                <input type="email" placeholder="Enter your email" name="email" required><br>
+                <input type="submit">
+            </form>
+
         </div>
 
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
