--- a/list.html
+++ b/list.html
@@ -11,8 +11,8 @@
 
         <div class="main-wrapper">
             <header>
-                <img style="height: 100px;" src="assets/images/logo.png" alt="The Hotel Logo">
-                <a href="login.html" target="_blank">Login</a>
+                <a href="index.html"><img style="height: 100px;" src="assets/images/logo.png" alt="The Hotel Logo"></a>
+                <a href="login.html">Login</a>
             </header>
             <div class="main">
 
@@ -54,7 +54,7 @@
             </div>
 
             <footer>
-                <a href="contact.html" target="_blank">Contact Us</a>
+                <a href="contact.html">Contact Us</a>
                 <div class="socials">
                     <a href="https://www.facebook.com/"><img src="assets/images/facebook.png" alt="Facebook Logo"></a>
                     <a href="https://www.instagram.com/"><img src="assets/images/instagram.png" alt="Instagram Logo"></a>
