--- a/login.html
+++ b/login.html
@@ -9,7 +9,19 @@
     <body>
 
         <div class="main-wrapper">
-            <h1>Login</h1>
+            
+            <form action="index.html" method="get" autocomplete="off" >
+                <div class="form-item">
+                    <label for="username">Username:</label>
+                    <input type="text" id="username" name="username" placeholder="Enter Username" required>
+                </div>
+                <div class="form-item">
+                    <label for="password">Password:</label>
+                    <input type="password" id="password" name="password" placeholder="Enter Password" required>
+                </div>
+                <input type="submit" value="Login">
+            </form>
+
         </div>
 
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
