--- a/list.html
+++ b/list.html
@@ -11,19 +11,19 @@
 
         <div class="main-wrapper">
             <header>
-                <a href="index.html"><img style="height: 100px;" src="assets/images/logo.png" alt="The Hotel Logo"></a>
+                <a href="index.html"><img style="height: 60px;" src="assets/images/logo.png" alt="The Hotel Logo"></a>
                 <a href="login.html">Login</a>
             </header>
             <div class="main">
 
                 <ul>
-                    <li><a href="#">List View</a></li>
-                    <li><a href="#">Map View</a></li>
+                    <li><a href="#list-view">List View</a></li>
+                    <li><a href="#map-view">Map View</a></li>
                 </ul>
 
                 <div class="hotel-lists">
 
-                    <div class="hotel-list-item">
+                    <div id="list-view" class="hotel-list-item">
                         <img src="https://media-cdn.tripadvisor.com/media/photo-w/17/b3/09/b4/by-the-poolside.jpg" alt="Raddison Blu Hotel">
                         <a href="detail.html">
                             <h3>Radisson Blu Hotel</h3>
@@ -46,7 +46,7 @@
 
                 </div>
 
-                <div class="map-view">
+                <div id="map-view">
                     <img src="https://cdn.pixabay.com/photo/2018/01/31/05/43/web-3120321_960_720.png" alt="Map View">
                     <p>MAP VIEW</p>
                 </div>
