--- a/list.html
+++ b/list.html
@@ -25,7 +25,7 @@
 
                     <div id="list-view" class="hotel-list-item">
                         <img src="https://media-cdn.tripadvisor.com/media/photo-w/17/b3/09/b4/by-the-poolside.jpg" alt="Raddison Blu Hotel">
-                        <a href="detail.html">
+                        <a href="detail.html" class="description">
                             <h3>Radisson Blu Hotel</h3>
                             <p>5 Star</p>
                             <p>New Delhi</p>
@@ -33,15 +33,19 @@
                     </div>
                     <div class="hotel-list-item">
                         <img src="https://media-cdn.tripadvisor.com/media/photo-w/15/06/31/5f/facade.jpg" alt="The Lalit Hotel">
-                        <h3>The Lalit Hotel</h3>
-                        <p>4.5 Star</p>
-                        <p>New Delhi</p>
+                        <div class="description">
+                            <h3>The Lalit Hotel</h3>
+                            <p>4.5 Star</p>
+                            <p>New Delhi</p>
+                        </div>
                     </div>
                     <div class="hotel-list-item">
                         <img src="https://media-cdn.tripadvisor.com/media/photo-w/1b/4e/9b/11/exterior.jpg" alt="Taj Palace">
-                        <h3>Taj Palace</h3>
-                        <p>4.0 Star</p>
-                        <p>New Delhi</p>
+                        <div class="description">
+                            <h3>Taj Palace</h3>
+                            <p>4.0 Star</p>
+                            <p>New Delhi</p>
+                        </div>
                     </div>
 
                 </div>
