--- a/detail.html
+++ b/detail.html
@@ -6,6 +6,7 @@
         <title>Detail</title>
         <link rel="stylesheet" href="styles/detail.css">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Ubuntu&display=swap">
     </head>
     <body>
@@ -71,7 +72,31 @@
             <div class="main">
                 <div class="payment-form">
                     <div style="width:70%;">
-                        <img src="https://media-cdn.tripadvisor.com/media/photo-w/17/b3/09/b4/by-the-poolside.jpg" alt="Raddison Blu Hotel">
+                        <!-- <img src="https://media-cdn.tripadvisor.com/media/photo-w/17/b3/09/b4/by-the-poolside.jpg" alt="Raddison Blu Hotel"> -->
+                        <div style="width: 500px; margin:0 auto">
+                            <div id="raddison-carousel" class="carousel slide" data-bs-ride="carousel">
+                              <div class="carousel-inner">
+                                <div class="carousel-item active">
+                                  <img src="https://media-cdn.tripadvisor.com/media/photo-w/17/b3/09/b4/by-the-poolside.jpg" class="d-block w-100" alt="Poolside">
+                                </div>
+                                <div class="carousel-item">
+                                  <img src="https://media-cdn.tripadvisor.com/media/photo-o/01/fa/51/70/r-the-spa.jpg" class="d-block w-100" alt="Spa">
+                                </div>
+                                <div class="carousel-item">
+                                  <img src="https://media-cdn.tripadvisor.com/media/photo-w/0e/b2/64/3f/radisson-blu-plaza-delhi.jpg" class="d-block w-100" alt="Pizza">
+                                </div>
+                              </div>
+                              <button class="carousel-control-prev" type="button" data-bs-target="#raddison-carousel" data-bs-slide="prev">
+                                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                                <span class="visually-hidden">Previous</span>
+                              </button>
+                              <button class="carousel-control-next" type="button" data-bs-target="#raddison-carousel" data-bs-slide="next">
+                                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                                <span class="visually-hidden">Next</span>
+                              </button>
+                            </div>
+                        </div>
+
                     </div>
                     <hr style="height: 400px; border: 1px solid black">
                     <div style="border-left: transparent; width:30%">
@@ -103,7 +128,13 @@
 
                 <h2>Radisson Blu Hotel</h2>
                 <h4 style="font-family: cursive;">RATING</h4>
-                <p>5 Star</p>
+                <p>
+                    <i class="material-icons" style="color: gold;">star</i>
+                    <i class="material-icons" style="color: gold;">star</i>
+                    <i class="material-icons" style="color: gold;">star</i>
+                    <i class="material-icons" style="color: gold;">star</i>
+                    <i class="material-icons" style="color: gold;">star</i>
+                </p>
                 <h4 style="font-family: cursive;">Ameneties</h4>
                 <ul>
                     <li>Room Service</li>
