--- a/list.html
+++ b/list.html
@@ -6,6 +6,7 @@
         <title>List</title>
         <link rel="stylesheet" href="styles/list.css">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Ubuntu&display=swap">
     </head>
     <body>
@@ -79,7 +80,13 @@
                         <img src="https://media-cdn.tripadvisor.com/media/photo-w/17/b3/09/b4/by-the-poolside.jpg" alt="Raddison Blu Hotel">
                         <a href="detail.html" class="description">
                             <h3>Radisson Blu Hotel</h3>
-                            <p>5 Star</p>
+                            <p>
+                                <i class="material-icons" style="color: gold;">star</i>
+                                <i class="material-icons" style="color: gold;">star</i>
+                                <i class="material-icons" style="color: gold;">star</i>
+                                <i class="material-icons" style="color: gold;">star</i>
+                                <i class="material-icons" style="color: gold;">star</i>
+                            </p>
                             <p>New Delhi</p>
                         </a>
                     </div>
@@ -87,7 +94,13 @@
                         <img src="https://media-cdn.tripadvisor.com/media/photo-w/15/06/31/5f/facade.jpg" alt="The Lalit Hotel">
                         <div class="description">
                             <h3>The Lalit Hotel</h3>
-                            <p>4.5 Star</p>
+                            <p>
+                                <i class="material-icons" style="color: gold;">star</i>
+                                <i class="material-icons" style="color: gold;">star</i>
+                                <i class="material-icons" style="color: gold;">star</i>
+                                <i class="material-icons" style="color: gold;">star</i>
+                                <i class="material-icons">star</i>
+                            </p>
                             <p>New Delhi</p>
                         </div>
                     </div>
@@ -95,7 +108,13 @@
                         <img src="https://media-cdn.tripadvisor.com/media/photo-w/1b/4e/9b/11/exterior.jpg" alt="Taj Palace">
                         <div class="description">
                             <h3>Taj Palace</h3>
-                            <p>4.0 Star</p>
+                            <p>
+                                <i class="material-icons" style="color: gold;">star</i>
+                                <i class="material-icons" style="color: gold;">star</i>
+                                <i class="material-icons" style="color: gold;">star</i>
+                                <i class="material-icons" style="color: gold;">star</i>
+                                <i class="material-icons">star</i>
+                            </p>
                             <p>New Delhi</p>
                         </div>
                     </div>
