--- a/contact.html
+++ b/contact.html
@@ -9,6 +9,7 @@
     </head>
     <body>
 
+        <!-- A simple form the code of which is used in the Contact Us Modal -->
         <div class="main-wrapper">
             
             <p>Thank you for reaching out!!!</p>
