--- a/list.html
+++ b/list.html
@@ -6,6 +6,8 @@
         <title>List</title>
         <link rel="stylesheet" href="styles/list.css">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+
+        <!-- Adding google material icons css -->
         <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Ubuntu&display=swap">
     </head>
@@ -61,6 +63,8 @@
                 </div>
 
         <div class="main-wrapper">
+
+            <!-- Header section with required functionality -->
             <header>
                 <a href="index.html"><img style="height: 60px;" src="assets/images/logo.png" alt="The Hotel Logo"></a>
                 <button type="button" class="btn btn-light" data-bs-toggle="modal" data-bs-target="#login-modal" style="margin-right: 1%;">
@@ -69,17 +73,22 @@
             </header>
             <div class="main">
 
+                <!-- List view and Map view buttons -->
                 <ul>
                     <li><button type="button" id="list-button" class="btn btn-primary" onclick="collapseMap();">List View</button></li>
                     <li><button type="button" id="map-button" class="btn" onclick="collapseList();">Map View</button></li>
                 </ul>
 
+                <!-- Hotel list flexbox -->
                 <div class="hotel-list" id="list-view">
 
+                    <!-- Actual cards with hotel info -->
                     <div class="hotel-list-item">
                         <img src="https://media-cdn.tripadvisor.com/media/photo-w/17/b3/09/b4/by-the-poolside.jpg" alt="Raddison Blu Hotel">
                         <a href="detail.html" class="description">
                             <h3>Radisson Blu Hotel</h3>
+
+                            <!-- Using i tag for star icons from google material icons -->
                             <p>
                                 <i class="material-icons" style="color: gold;">star</i>
                                 <i class="material-icons" style="color: gold;">star</i>
@@ -121,6 +130,7 @@
 
                 </div>
 
+                <!-- Map view to be shown on button press -->
                 <div id="map-view">
                     <img src="https://cdn.pixabay.com/photo/2018/01/31/05/43/web-3120321_960_720.png" alt="Map View">
                     <p>MAP VIEW</p>
@@ -128,6 +138,7 @@
 
             </div>
 
+            <!-- Footer section with the required functionality -->
             <footer>
                 <button type="button" class="btn btn-info" data-bs-toggle="modal" data-bs-target="#contact-modal" style="color: #f4f4f4;">
                   Contact Us
@@ -141,6 +152,7 @@
             </footer>
         </div>
         
+        <!-- Adding the functionality for the button toggles -->
         <script>
             function collapseList() {
                 if ( document.getElementById("list-button").classList.contains('btn-primary') ) {
