--- a/loader.html
+++ b/loader.html
@@ -8,6 +8,7 @@
     </head>
     <body>
         <div class="main-wrapper">
+            <!-- The div that will rotate from the animation -->
             <div id="circle"></div>
         </div>
         
