--- a/payment.html
+++ b/payment.html
@@ -61,6 +61,7 @@
 
         <div class="main-wrapper">
             
+            <!-- Header section with required functionality -->
             <header>
                 <a href="index.html"><img style="height: 60px;" src="assets/images/logo.png" alt="The Hotel Logo"></a>
                 <button type="button" class="btn btn-light" data-bs-toggle="modal" data-bs-target="#login-modal" style="margin-right: 1%;">
@@ -69,7 +70,7 @@
             </header>
 
             <div class="main">
-
+                <!-- Welcome card on the webpage -->
                 <div class="content">
                     <img src="https://media-cdn.tripadvisor.com/media/photo-w/17/b3/09/b4/by-the-poolside.jpg" alt="Raddison Blu Hotel"><br>
                     <div style="margin-left:4%">
@@ -79,6 +80,7 @@
                     </div>
                 </div>
 
+                <!-- The tarrif detail flexbox that follows -->
                 <div class="tarrif-details">
                     <div>
                         <p><strong style="font-family: cursive;">Name: </strong>John Doe</p>
@@ -95,6 +97,7 @@
 
             </div>
 
+            <!-- Footer section with the required functionality -->
             <footer>
                 <button type="button" class="btn btn-info" data-bs-toggle="modal" data-bs-target="#contact-modal" style="color: #f4f4f4;">
                   Contact Us
